--- a/page.hbs
+++ b/page.hbs
@@ -1,33 +1,64 @@
 {{!< default}}
 
-{{! This is a page template. A page outputs content just like any other post, and has all the same
-    attributes by default, but you can also customise it to behave differently if you prefer. }}
-
-{{! Everything inside the #post tags pulls data from the page }}
 {{#post}}
 
-<header class="main-header post-head {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}">
-    <nav class="main-nav {{#if image}}overlay{{/if}} clearfix">
-        {{#if @blog.logo}}<a class="blog-logo" href="{{@blog.url}}"><img src="{{@blog.logo}}" alt="{{@blog.title}}" /></a>{{/if}}
-        {{#if @blog.navigation}}
-            <a class="menu-button icon-menu" href="#"><span class="word">Menu</span></a>
-        {{/if}}
-    </nav>
+<div class="navigation_partial">
+    <div class="mdl-layout mdl-js-layout mdl-layout--overlay-drawer-button">
+        {{> "navigation"}}
+    </div>
+</div>
+
+<header class="main-header post-head" style="background-image: url({{image}})">
+
 </header>
 
 <main class="content" role="main">
     <article class="{{post_class}}">
 
-        <header class="post-header">
+
+        <div class="demo-container mdl-grid">
+          <div class="mdl-cell mdl-cell--2-col mdl-cell--hide-tablet mdl-cell--hide-phone"></div>
+          <div class="post-content mdl-color--white mdl-shadow--4dp content mdl-color-text--grey-800 mdl-cell mdl-cell--8-col">
             <h1 class="post-title">{{title}}</h1>
-        </header>
+             {{content}}
 
-        <section class="post-content">
-            {{content}}
-        </section>
+            <footer class="post-footer">
 
+            {{! Everything inside the #author tags pulls data from the author }}
+            {{#author}}
+
+                {{#if image}}
+                <figure class="author-image">
+                    <a class="img" style="background-image: url({{image}})"><span class="hidden">{{name}}'s Picture</span></a>
+                </figure>
+                {{/if}}
+
+            {{/author}}
+
+            </footer>
+          </div>
+        </div>
     </article>
 </main>
-{{/post}}
 
+<aside class="read-next">
+    {{#next_post}}
+    <a class="read-next-story {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
+        <section class="post">
+            <h2>{{title}}</h2>
+            <p>{{excerpt words="19"}}&hellip;</p>
+        </section>
+    </a>
+    {{/next_post}}
+    {{#prev_post}}
+    <a class="read-next-story prev {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
+        <section class="post">
+            <h2>{{title}}</h2>
+            <p>{{excerpt words="19"}}&hellip;</p>
+        </section>
+    </a>
+    {{/prev_post}}
+</aside>
+
+{{/post}}
 
