--- a/tag.hbs
+++ b/tag.hbs
@@ -16,7 +16,7 @@
                 {{> "splash"}}
             </div>
 
-            <h1 class="page-title">{{tag.name}}</h1>
+            <h1 class="page-title">{{tag.name}} Posts</h1>
         
             <div class="post-loop_partial">
                 {{> "loop"}}
