--- a/default.hbs
+++ b/default.hbs
@@ -38,15 +38,13 @@
 
         <footer class="site-footer clearfix">
             <section class="copyright"><a href="{{@blog.url}}">{{@blog.title}}</a> &copy; {{date format="YYYY"}}</section>
-            <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a></section>
+            <section class="poweredby">Proudly published with <a href="https://ghost.org">Ghost</a> using the <a href="https://github.com/jacksonsouza/headless">Headless</a> theme</section>
         </footer>
 
     </div>
 
     {{! Ghost outputs important scripts and data with this tag }}
     {{ghost_foot}}
-
-    {{! The main JavaScript file for Casper }}
 
   <!-- Theme JS -->
     <script src="{{asset 'js/libs/material.js'}}" type="text/javascript"></script>
