--- a/page-about.hbs
+++ b/page-about.hbs
@@ -59,10 +59,10 @@
                     <div class="about_content-resource-grid mdl-grid">
                         <h4 class="mdl-cell mdl-cell--12-col">Art</h4>
                         <div class="art-resource-img mdl-cell mdl-cell--6-col">
-                            <a href="http://rebel8.com/blogs/giant"><img src= "../content/images/theme/giant.jpg">
+                            <a target="_blank" href="http://rebel8.com/blogs/giant"><img src= "../content/images/theme/giant.jpg">
                         </div>
                         <div class="art-resource-img mdl-cell mdl-cell--6-col">
-                            <a href="https://en.wikipedia.org/wiki/Paul_Laffoley"><img src= "../content/images/theme/laffoley.jpg"></a>
+                            <a target="_blank" href="https://en.wikipedia.org/wiki/Paul_Laffoley"><img src= "../content/images/theme/laffoley.jpg"></a>
                         </div>
                     </div>
 
@@ -70,12 +70,12 @@
                 
                     <iframe width="560" height="24" src="//www.youtube.com/embed/-l1eYwg22V4?start=312&autohide=0" frameborder="0" allowfullscreen></iframe>
 
-                    <p>I remember singing this one with some friends at a festival in Santa Barbara. Here's a <a href="https://www.youtube.com/watch?v=3iPcHt1xUuk">video</a> of the same festival in that, if you squint hard enough, the singer looks just like my father. Dad could pull it off, I have faith.</p>
+                    <p>I remember singing this one with some friends at a festival in Santa Barbara. Here's a <a target="_blank" href="https://www.youtube.com/watch?v=3iPcHt1xUuk">video</a> of the same festival in that, if you squint hard enough, the singer looks just like my father. Dad could pull it off, I have faith.</p>
 
 
                      <p>A note: The development logs are a peek inside my head, and my brain is certainly no Hemingway. In this regard, I often move quickly from one project to the next so, please excuse spelling and non-coherency. I often throw hasty sketches and example code on these as well, in hope I can one day chuckle at them with my wizard beard and coke bottle glasses. Rest assured that all portfolio and longform items can be held to a higher standard. Thank you & enjoy!</p>
 
-                    <p>This blog is hosted on the Ghost.js platform. The theme is custom and for download <a href="/">here</a>.</p>
+                    <p>This blog is hosted on the Ghost.js platform. The theme is custom and for download <a target="_blank" href="https://github.com/jacksonsouza/headless">here</a>.</p>
                 </div>
 
                 <footer class="post-footer">
@@ -87,7 +87,7 @@
 
     <aside class="read-next">
         {{#next_post}}
-        <a class="read-next-story {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
+        <a target="_blank" class="read-next-story {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
             <section class="post">
                 <h2>{{title}}</h2>
                 <p>{{excerpt words="19"}}&hellip;</p>
@@ -95,7 +95,7 @@
         </a>
         {{/next_post}}
         {{#prev_post}}
-        <a class="read-next-story prev {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
+        <a target="_blank" class="read-next-story prev {{#if image}}" style="background-image: url({{image}}){{else}}no-cover{{/if}}" href="{{url}}">
             <section class="post">
                 <h2>{{title}}</h2>
                 <p>{{excerpt words="19"}}&hellip;</p>
