--- a/page-work.hbs
+++ b/page-work.hbs
@@ -8,7 +8,7 @@
           </div>
       </div>
 
-      <header class="main-header post-head" style="background-image: url({{image}})">
+      <header class="main-header post-head" style="">
       </header>
 
     <main class="content" role="main">
@@ -21,12 +21,117 @@
           </div>
 
           <div class="mdl-card__supporting-text">
-            <p>For <a href="http://www.urbandictionary.com/define.php?term=tl%3Bdr">TL;DR</a> version of this page, please refer to my <a href="../assets/JSouza-Resume.pdf" target="_blank">résumé.</a></p>
+            <p>For <a target="_blank" href="http://www.urbandictionary.com/define.php?term=tl%3Bdr">TL;DR</a> version of this page, please refer to my <a target="_blank" href="../content/images/theme/page-work/JSouza-Resume.pdf" target="_blank">résumé.</a></p>
           </div>
         </article>
 
+          <div class="mdl-cell--12-col card-row">
+
+                    <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/azuqua-1.jpg)">
+
+                  <div class="bg-overlay">
+                  </div>
+
+                  <h2 class="mdl-card__title-text">
+                    <a target="_blank" href="https://www.azuqua.com/">AZUQUA</a>
+                  </h2>
+
+                </div>
+                <div class="mdl-card__supporting-text">
+
+                 <p class="desc">An explosively growing Seattle startup that offers a platform to “chain” various popular business services together.
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a target="_blank" href="https://www.azuqua.com/">https://www.azuqua.com/</a><br>
+
+
+                  <h5>DATE</h5>
+                  <p>Q3 2015 - Ongoing</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Developing & QAing "channel" blocks from service APIs</li>
+                  <li>Migrating the company website from PHP using Jade, LESS and Node.js</li>
+
+                  <a target="_blank" class="read-more" href=""></a>
+
+                </div>
+              </article>
+          </div>
+
+            <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/headless-1.png)">
+                    <div class="bg-overlay">
+                    </div>
+
+                    <h2 class="mdl-card__title-text">
+                      <a target="_blank" href="https://github.com/jacksonsouza/headless">HEADLESS</a>
+                    </h2>
+
+                  </div>
+              
+                <div class="mdl-card__supporting-text">
+
+                  <p class="desc">A minimal "Material Design" theme for the Ghost.js blogging platform. You're using it!
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a target="_blank" href="https://github.com/jacksonsouza/headless">https://github.com/jacksonsouza/headless</a><br>
+
+                  <h5>DATE</h5>
+                  <p>Q3 2015</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Development & design with Handlebars, SASS & jQuery</li>
+
+                  <a target="_blank" class="read-more" href=""></a>
+                </div>
+              </article>
+            </div>
+  
+        </div>
+
+
 
         <div class="mdl-cell--12-col card-row">
+
+                    <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/lc-1.jpg)">
+
+                  <div class="bg-overlay">
+                  </div>
+
+                  <h2 class="mdl-card__title-text">
+                    <a target="_blank" href="../content/images/theme/page-work/lcma.pdf">LIGHT</a>
+                  </h2>
+
+                </div>
+                <div class="mdl-card__supporting-text">
+
+                 <p class="desc">A thesis on the  <a target="_blank" href="https://en.wikipedia.org/wiki/Leitmotif">leitmotif</a> of illumination across Medieval Philosophy. Written by Jackson Souza in conjunction with Dr. Tom Ward at Loyola Marymount University.
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a target="_blank" href="../content/images/theme/page-work/lcma.pdf">Essay</a><br>
+
+
+                  <h5>DATE</h5>
+                  <p>Q4 2014 & Q1 2015</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Conducted & defended original research in the history of Cognition and Aesthetics in Medieval Philosophy</li>
+                  <li>Work on the inherent "<a target="_blank" href="https://en.wikipedia.org/wiki/Strange_loop">loopiness</a>" of the light analogy is ongoing</li>
+
+                  <a target="_blank" class="read-more" href=""></a>
+
+                </div>
+              </article>
+          </div>
+
             <div class="port-item mdl-cell mdl-cell--6-col">
               <article class="mdl-card mdl-shadow--2dp demo-card-wide">
                   <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
@@ -34,7 +139,7 @@
                     </div>
 
                     <h2 class="mdl-card__title-text">
-                      <a href="/skillgenie">SKILLGENIE</a>
+                      <a target="_blank" href="/skillgenie">SKILLGENIE</a>
                     </h2>
 
                   </div>
@@ -45,96 +150,27 @@
                   </p>
 
                   <h5>LINKS</h5>
-                  <a href="https://damp-depths-5898.herokuapp.com/">Alpha Build</a><br>
-                  <a href="http://skillgenie.net/">http://skillgenie.net/</a>
+                  <a target="_blank" href="https://damp-depths-5898.herokuapp.com/">Alpha Build</a><br>
+                  <a target="_blank" href="http://skillgenie.net/">http://skillgenie.net/</a>
 
                   <h5>DATE</h5>
                   <p>Q2 2014 - May 2015</p>
 
                   <h5>CONTRIBUTIONS</h5>
-                  <li>Full-stack web development in Javascript</li>
+                  <li>Full-stack web application development (& design) in Javascript</li>
                   <li>Supporting research in philosophy of psychology, metacognition & cognitive science</li>
 
-                  <a class="read-more" href="/skillgenie">Read More&raquo;</a>
+                  <a target="_blank" class="read-more" href="/skillgenie">Read More&raquo;</a>
                 </div>
               </article>
             </div>
   
-
-            <div class="port-item mdl-cell mdl-cell--6-col">
-              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
-                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/xsolla-1.png)">
-
-                  <div class="bg-overlay">
-                  </div>
-
-                  <h2 class="mdl-card__title-text">
-                    <a href="/xsolla">XSOLLA</a>
-                  </h2>
-
-                </div>
-                <div class="mdl-card__supporting-text">
-
-                 <p class="desc">A small company that "offers a wide selection of ready-made solutions to help game developers monetize their games and increase conversion".
-                  </p>
-
-                  <h5>LINKS</h5>
-                  <a href="/">http://tacoapp.com</a><br>
-                  <a href="/">http://tacoapp.com</a>
-
-
-                  <h5>DATE</h5>
-                  <p>December 2012 - Present</p>
-
-                  <h5>CONTRIBUTIONS</h5>
-                  <li>Co-Founder</li>
-                  <li>Co-Founder</li>
-                  <li>Co-Founder</li>
-
-                  <a class="read-more" href="/xsolla">Read More&raquo;</a>
-
-                </div>
-              </article>
-          </div>
         </div>
 
 
           <div class="mdl-cell--12-col card-row">
-            <div class="port-item mdl-cell mdl-cell--6-col">
-              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
-                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
-                    <div class="bg-overlay">
-                    </div>
 
-                    <h2 class="mdl-card__title-text">
-                      <a href="/skillgenie">SKILLGENIE</a>
-                    </h2>
-
-                  </div>
-              
-                <div class="mdl-card__supporting-text">
-
-                  <p class="desc">A web app that facilitates independent education via "learning analytics" - completely apart from the specifics of the information.
-                  </p>
-
-                  <h5>LINKS</h5>
-                  <a href="https://damp-depths-5898.herokuapp.com/">Alpha Build</a><br>
-                  <a href="http://skillgenie.net/">http://skillgenie.net/</a>
-
-                  <h5>DATE</h5>
-                  <p>Q2 2014 - May 2015</p>
-
-                  <h5>CONTRIBUTIONS</h5>
-                  <li>Full-stack web development in Javascript</li>
-                  <li>Supporting research in philosophy of psychology, metacognition & cognitive science</li>
-
-                  <a class="read-more" href="/skillgenie">Read More&raquo;</a>
-                </div>
-              </article>
-            </div>
-  
-
-            <div class="port-item mdl-cell mdl-cell--6-col">
+                      <div class="port-item mdl-cell mdl-cell--6-col">
               <article class="mdl-card mdl-shadow--2dp demo-card-wide">
                 <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/xsolla-1.png)">
 
@@ -142,34 +178,105 @@
                   </div>
 
                   <h2 class="mdl-card__title-text">
-                    <a href="/xsolla">XSOLLA</a>
+                    <a target="_blank" href="/xsolla">XSOLLA</a>
                   </h2>
 
                 </div>
                 <div class="mdl-card__supporting-text">
 
-                 <p class="desc">A small company that "offers a wide selection of ready-made solutions to help game developers monetize their games and increase conversion".
+                 <p class="desc">An multi-national company that "offers a wide selection of ready-made solutions to help game developers monetize their games and increase conversion".
                   </p>
 
                   <h5>LINKS</h5>
-                  <a href="/">http://tacoapp.com</a><br>
-                  <a href="/">http://tacoapp.com</a>
+                  <a target="_blank" href="http://xsolla.com/">http://xsolla.com/</a><br>
+                  <a target="_blank" href="http://developers.xsolla.com/api.html">Xsolla API</a>
 
 
                   <h5>DATE</h5>
-                  <p>December 2012 - Present</p>
+                  <p>April 2014 - November 2014</p>
 
                   <h5>CONTRIBUTIONS</h5>
-                  <li>Co-Founder</li>
-                  <li>Co-Founder</li>
-                  <li>Co-Founder</li>
+                  <li>Developed targeted landing pages for prospective partners</li>
+                  <li>Rewrote documentation for the Xsolla API</li>
+                  <li>Maintained internal, multi-language Wordpress tools for international pages</li>
 
-                  <a class="read-more" href="/xsolla">Read More&raquo;</a>
+                  <a target="_blank" class="read-more" href="/xsolla">Read More&raquo;</a>
 
                 </div>
               </article>
           </div>
+
+            <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/hbd-1.png)">
+                    <div class="bg-overlay">
+                    </div>
+
+                    <h2 class="mdl-card__title-text">
+                      <a target="_blank" href="http://hairbydesiree.com/">HAIR BY DESIREE</a>
+                    </h2>
+
+                  </div>
+              
+                <div class="mdl-card__supporting-text">
+
+                  <p class="desc"> A live-updating portfolio site for a Beverly Hills based hairstylist, heavily integrated with Instagram for ease of use.
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a target="_blank" href="http://hairbydesiree.com/">http://hairbydesiree.com/</a><br>
+
+                  <h5>DATE</h5>
+                  <p>Q3 2014</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Development & design in HTML, CSS and JS</li>
+                  <li>Extension of the Instagram API using Instafeed.js to facilitate live content updating</li>
+
+                  <a target="_blank" class="read-more" href=""></a>
+                </div>
+              </article>
+            </div>
+  
+
+           
         </div>
+
+        <div class="mdl-cell--12-col card-row">
+         <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/lagf-1.png)">
+
+                  <div class="bg-overlay">
+                  </div>
+
+                  <h2 class="mdl-card__title-text">
+                    <a target="_blank" href="/l-a-girlfriend">L.A. GIRLFRIEND</a>
+                  </h2>
+
+                </div>
+                <div class="mdl-card__supporting-text">
+
+                 <p class="desc">A collaborative relationship between Los Angeles-based musician & designer, Sydney Banta, and I. During the expansion of her (then) solo music project, I contributed as a musician and web developer.
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a target="_blank" href="https://lagirlfriend.bandcamp.com/">https://lagirlfriend.bandcamp.com/</a><br>
+
+
+                  <h5>DATE</h5>
+                  <p>Q4 2012 - Q2 2014</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Expanded live and studio music production setup with Abelton Live 8 and guitar</li>
+                  <li>Developed v2 of the L.A. Girlfriend website</li>
+
+                  <a target="_blank" class="read-more" href="/l-a-girlfriend">Read More&raquo;</a>
+
+                </div>
+              </article>
+          </div>
+          </div>
 
 
 
