--- a/page-work.hbs
+++ b/page-work.hbs
@@ -2,14 +2,9 @@
 
 {{#post}}
 <div class="portfolio_page">
-      <div class="navigation_partial">
-          <div class="mdl-layout mdl-js-layout mdl-layout--overlay-drawer-button ">
-              {{> "navigation"}}
-          </div>
-      </div>
 
-      <header class="main-header post-head" style="background-image: url({{image}})">
-      </header>
+    <header class="main-header post-head" style="background-image: url({{feature_image}})">
+    </header>
 
     <main class="content" role="main">
 
@@ -21,120 +16,185 @@
           </div>
 
           <div class="mdl-card__supporting-text">
-            <p>For <a href="http://www.urbandictionary.com/define.php?term=tl%3Bdr">TL;DR</a> version of this page, please refer to my <a href="../assets/JSouza-Resume.pdf" target="_blank">résumé.</a></p>
+            <p>For a condensed version of this page and contact information, please refer to my <a target="_blank" href="../content/images/theme/page-work/JSouza-Resume.pdf">resume</a></p>
+            <p>For code samples and open source contributions, please visit <a target="_blank" href="https://github.com/jacksonsouza" > github.com/jacksonsouza</a></p>
           </div>
         </article>
 
+          <div class="mdl-cell--12-col card-row">
 
-        <div class="mdl-cell--12-col card-row">
             <div class="port-item mdl-cell mdl-cell--6-col">
               <article class="mdl-card mdl-shadow--2dp demo-card-wide">
-                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
+                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/sportsrocket-1.jpg)">
+
+                  <div class="bg-overlay">
+                  </div>
+
+                  <h2 class="mdl-card__title-text">
+                    <a target="_blank" href="http://sportsrocket.com/">SPORTSROCKET</a>
+                  </h2>
+
+                </div>
+                <div class="mdl-card__supporting-text">
+
+                 <p class="desc">A Bellevue, WA startup offering a content management platform for video and live streaming content.
+                  </p>
+
+
+                  <h5>DATE</h5>
+                  <p>Q3 2016 - Present</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Developed web applications focused on the delivery of video and text content for Sportsrocket’s main product offering.</li>
+									<li>Implemented AWS Cloudwatch based benchmarking utilities to monitor and limit expensive resource usage.</li>
+
+
+                  <a target="_blank" href="/sportsrocket" class="read-more" href="">Read More&raquo;</a>
+                </div>
+              </article>
+            </div>
+
+                         <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/build-1.jpg)">
                     <div class="bg-overlay">
                     </div>
 
                     <h2 class="mdl-card__title-text">
-                      <a href="/skillgenie">SKILLGENIE</a>
+                      <a target="_blank" href="/fabrication">FABRICATION</a>
                     </h2>
 
                   </div>
               
                 <div class="mdl-card__supporting-text">
 
-                  <p class="desc">A web app that facilitates independent education via "learning analytics" - completely apart from the specifics of the information.
+                  <p class="desc">A collection of photos and text describing various projects that I have "made with my hands".
                   </p>
 
-                  <h5>LINKS</h5>
-                  <a href="https://damp-depths-5898.herokuapp.com/">Alpha Build</a><br>
-                  <a href="http://skillgenie.net/">http://skillgenie.net/</a>
-
                   <h5>DATE</h5>
-                  <p>Q2 2014 - May 2015</p>
+                  <p>Ongoing</p>
 
                   <h5>CONTRIBUTIONS</h5>
-                  <li>Full-stack web development in Javascript</li>
-                  <li>Supporting research in philosophy of psychology, metacognition & cognitive science</li>
+                  <li>Design and fabrication of products utilizing wood, metal and electronics</li>
 
-                  <a class="read-more" href="/skillgenie">Read More&raquo;</a>
+
+                                    <a target="_blank" href="/fabrication" class="read-more" href="">Read More&raquo;</a>
+
+                  
                 </div>
               </article>
             </div>
-  
 
-            <div class="port-item mdl-cell mdl-cell--6-col">
+
+  
+        </div>
+
+
+
+        <div class="mdl-cell--12-col card-row">
+
+                    <div class="port-item mdl-cell mdl-cell--6-col">
               <article class="mdl-card mdl-shadow--2dp demo-card-wide">
-                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/xsolla-1.png)">
+                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/muffet-1.jpg)">
+                    <div class="bg-overlay">
+                    </div>
+
+                    <h2 class="mdl-card__title-text">
+                      <a target="_blank" href="https://github.com/jacksonsouza/muffet">MUFFET</a>
+                    </h2>
+
+                  </div>
+              
+                <div class="mdl-card__supporting-text">
+
+                  <p class="desc">A prototype IOT device and web platform that allows you to represent numerical information on beautiful, handmade displays.
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a target="_blank" href="https://github.com/jacksonsouza/muffet">https://github.com/jacksonsouza/muffet</a><br>
+                  <a target="_blank" href="https://github.com/jacksonsouza/muffet/tree/master/server#api-documentation">API Docs</a><br>
+                  <a target="_blank" href="https://www.youtube.com/watch?v=c0vz66C4ASg">Video Demo</a><br>
+
+                  <h5>DATE</h5>
+                  <p>Q2 2017</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Design, development and manufacture of hand-made IoT furnishing</li>
+                  <li>Creation of open-source software ecosystem (client/server web application, hardware & firmware) for product</li>
+                  
+                </div>
+              </article>
+            </div>
+
+                    <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/azuqua-1.jpg)">
 
                   <div class="bg-overlay">
                   </div>
 
                   <h2 class="mdl-card__title-text">
-                    <a href="/xsolla">XSOLLA</a>
+                    <a target="_blank" href="https://www.azuqua.com/">AZUQUA</a>
                   </h2>
 
                 </div>
                 <div class="mdl-card__supporting-text">
 
-                 <p class="desc">A small company that "offers a wide selection of ready-made solutions to help game developers monetize their games and increase conversion".
+                 <p class="desc">A Seattle, WA startup offering a workflow automation engine and associated tooling used to build API integrations.
                   </p>
 
-                  <h5>LINKS</h5>
-                  <a href="/">http://tacoapp.com</a><br>
-                  <a href="/">http://tacoapp.com</a>
-
-
                   <h5>DATE</h5>
-                  <p>December 2012 - Present</p>
+                  <p>Q2 2015 - Q3 2016</p>
 
                   <h5>CONTRIBUTIONS</h5>
-                  <li>Co-Founder</li>
-                  <li>Co-Founder</li>
-                  <li>Co-Founder</li>
+                  <li>Built and managed 15 of the most used integrations for Azuqua’s workflow engine</li>
+                  <li>Managed communication from industry contacts about integration with their apps in order to better meet the needs of smaller clients.</li>
 
-                  <a class="read-more" href="/xsolla">Read More&raquo;</a>
 
+                  <a target="_blank" class="read-more" href="/azuqua">Read More&raquo;</a>
                 </div>
               </article>
-          </div>
-        </div>
+            </div>
+                        </div>
+
+
+
 
 
           <div class="mdl-cell--12-col card-row">
-            <div class="port-item mdl-cell mdl-cell--6-col">
+
+         <div class="port-item mdl-cell mdl-cell--6-col">
               <article class="mdl-card mdl-shadow--2dp demo-card-wide">
-                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
+                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/headless-1.png)">
                     <div class="bg-overlay">
                     </div>
 
                     <h2 class="mdl-card__title-text">
-                      <a href="/skillgenie">SKILLGENIE</a>
+                      <a target="_blank" href="https://github.com/jacksonsouza/headless">HEADLESS</a>
                     </h2>
 
                   </div>
               
                 <div class="mdl-card__supporting-text">
 
-                  <p class="desc">A web app that facilitates independent education via "learning analytics" - completely apart from the specifics of the information.
+                  <p class="desc">A minimal "Material Design" theme for the Ghost.js blogging platform. You're using it!
                   </p>
 
                   <h5>LINKS</h5>
-                  <a href="https://damp-depths-5898.herokuapp.com/">Alpha Build</a><br>
-                  <a href="http://skillgenie.net/">http://skillgenie.net/</a>
+                  <a target="_blank" href="https://github.com/jacksonsouza/headless">https://github.com/jacksonsouza/headless</a><br>
 
                   <h5>DATE</h5>
-                  <p>Q2 2014 - May 2015</p>
+                  <p>Q3 2015</p>
 
                   <h5>CONTRIBUTIONS</h5>
-                  <li>Full-stack web development in Javascript</li>
-                  <li>Supporting research in philosophy of psychology, metacognition & cognitive science</li>
+                  <li>Development & design with Handlebars, SASS & jQuery</li>
 
-                  <a class="read-more" href="/skillgenie">Read More&raquo;</a>
+                  <a target="_blank" class="read-more" href=""></a>
                 </div>
               </article>
             </div>
   
-
-            <div class="port-item mdl-cell mdl-cell--6-col">
+                      <div class="port-item mdl-cell mdl-cell--6-col">
               <article class="mdl-card mdl-shadow--2dp demo-card-wide">
                 <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/xsolla-1.png)">
 
@@ -142,34 +202,105 @@
                   </div>
 
                   <h2 class="mdl-card__title-text">
-                    <a href="/xsolla">XSOLLA</a>
+                    <a target="_blank" href="/xsolla">XSOLLA</a>
                   </h2>
 
                 </div>
                 <div class="mdl-card__supporting-text">
 
-                 <p class="desc">A small company that "offers a wide selection of ready-made solutions to help game developers monetize their games and increase conversion".
+                 <p class="desc">An multi-national company that "offers a wide selection of ready-made solutions to help game developers monetize their games and increase conversion".
                   </p>
 
                   <h5>LINKS</h5>
-                  <a href="/">http://tacoapp.com</a><br>
-                  <a href="/">http://tacoapp.com</a>
+                  <a target="_blank" href="http://developers.xsolla.com/api.html">Xsolla API</a>
 
 
                   <h5>DATE</h5>
-                  <p>December 2012 - Present</p>
+                  <p>April 2014 - November 2014</p>
 
                   <h5>CONTRIBUTIONS</h5>
-                  <li>Co-Founder</li>
-                  <li>Co-Founder</li>
-                  <li>Co-Founder</li>
+                  <li>Developed targeted landing pages for prospective partners</li>
+                  <li>Rewrote documentation for the Xsolla API</li>
+                  <li>Maintained internal, multi-language Wordpress tools for international pages</li>
 
-                  <a class="read-more" href="/xsolla">Read More&raquo;</a>
+                  <a target="_blank" class="read-more" href="/xsolla">Read More&raquo;</a>
 
                 </div>
               </article>
           </div>
+
+ 
+  
+
+           
         </div>
+
+        <div class="mdl-cell--12-col card-row">
+
+                  <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/hbd-1.png)">
+                    <div class="bg-overlay">
+                    </div>
+
+                    <h2 class="mdl-card__title-text">
+                      <a target="_blank" href="http://jsouza.co/content/images/sites/hbd/">HAIR BY DESIREE</a>
+                    </h2>
+
+                  </div>
+              
+                <div class="mdl-card__supporting-text">
+
+                  <p class="desc"> A live-updating portfolio site for a Beverly Hills based hairstylist, heavily integrated with Instagram for ease of use.
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a target="_blank" href="http://jsouza.co/content/images/sites/hbd/">http://hairbydesiree.com/</a><br>
+
+                  <h5>DATE</h5>
+                  <p>Q3 2014</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Development & design in HTML, CSS and JS</li>
+                  <li>Extension of the Instagram API using Instafeed.js to facilitate live content updating</li>
+
+                  <a target="_blank" class="read-more" href=""></a>
+                </div>
+              </article>
+            </div>
+            
+            <div class="port-item mdl-cell mdl-cell--6-col">
+              <article class="mdl-card mdl-shadow--2dp demo-card-wide">
+                  <div class="mdl-card__title" style="background:url(../content/images/theme/page-work/skillgenie-1.png)">
+                    <div class="bg-overlay">
+                    </div>
+
+                    <h2 class="mdl-card__title-text">
+                      <a target="_blank" href="http://jsouza.co/content/images/sites/skg/">SKILLGENIE</a>
+                    </h2>
+
+                  </div>
+              
+                <div class="mdl-card__supporting-text">
+
+                  <p class="desc">A proof-of-concept web app, landing page and pitch deck that centers on facilitating independent education via "learning analytics".
+                  </p>
+
+                  <h5>LINKS</h5>
+                  <a target="_blank" href="http://jsouza.co/content/images/sites/skg/">http://skillgenie.net/</a>
+
+                  <h5>DATE</h5>
+                  <p>Q2 2014 - Q2 2015</p>
+
+                  <h5>CONTRIBUTIONS</h5>
+                  <li>Full-stack web application development (& design) in Javascript</li>
+                  <li>Supporting research in philosophy of psychology, metacognition & cognitive science</li>
+
+                  <a target="_blank" class="read-more" href="/skillgenie">Read More&raquo;</a>
+                </div>
+              </article>
+            </div>
+          </div>
 
 
 
