--- a/partials/navigation.hbs
+++ b/partials/navigation.hbs
@@ -8,7 +8,7 @@
     </div>
     <nav class="mdl-navigation">
       <a class="mdl-navigation__link" href="/about">About</a>
-      <a class="mdl-navigation__link" href="/">Essays</a>
+      <a class="mdl-navigation__link" href="/tag/longform">Essays</a>
       <a class="mdl-navigation__link" href="/tag/dev">Development</a>
       <a class="mdl-navigation__link" href="/work">Portfolio</a>
     </nav>
