--- a/default.hbs
+++ b/default.hbs
@@ -47,7 +47,8 @@
     {{ghost_foot}}
 
   <!-- Theme JS -->
-    <script src="{{asset 'js/libs/material.js'}}" type="text/javascript"></script>
+    <script type="text/javascript" src="{{asset "js/libs/jquery-2.1.4.min.js"}}"></script>
+    <script src="{{asset "js/libs/material.js"}}" type="text/javascript"></script>
     <script type="text/javascript" src="{{asset "js/jquery.fitvids.js"}}"></script>
     <script type="text/javascript" src="{{asset "js/index.js"}}"></script>
 
